tests/type-errors/general/template_deduction_conflict.cx
T add<T>(T a, T b) {
    return a + b;
}

int main() {
    return add(1, 2.0);
}
